force-app/main/default/objects/Service_Request__c/fields/Appliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Type__c</fullName>
    <label>Appliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washer</fullName>
            </value>
            <value>
                <fullName>Dryer</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Oven</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>