force-app/main/default/objects/Service_Request__c/fields/Common_Fault__c.field-meta.xml
<CustomField>
    <fullName>Common_Fault__c</fullName>
    <label>Common Fault</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appliance_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won&apos;t drain</fullName>
            </value>
            <value>
                <fullName>Won&apos;t spin</fullName>
            </value>
            <value>
                <fullName>Leaking</fullName>
            </value>
            <value>
                <fullName>Not cooling</fullName>
            </value>
            <value>
                <fullName>Ice maker broken</fullName>
            </value>
            <value>
                <fullName>Noisy compressor</fullName>
            </value>
            <value>
                <fullName>Not Drying</fullName>
            </value>
            <value>
                <fullName>Ruining Clothes</fullName>
            </value>
            <value>
                <fullName>Not Warming</fullName>
            </value>
            <value>
                <fullName>Not Cleaning Dishes Properly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>