force-app/main/default/objects/Service_Request__c/fields/Completed_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Completed_Work_Orders__c</fullName>
    <label>Completed Work Orders</label>
    <summaryFilterItems>
        <field>Work_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Order__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>