force-app/main/default/objects/Service_Request__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF(
  ISPICKVAL(Status__c, &apos;Completed&apos;) || ISPICKVAL(Status__c, &apos;Cancelled&apos;),
  DATEVALUE(LastModifiedDate) - DATEVALUE(CreatedDate),
  TODAY() - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>