force-app/main/default/objects/Service_Request__c/fields/SUM_of_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>SUM_of_Labor_Hours__c</fullName>
    <label>SUM of Labor Hours</label>
    <summarizedField>Work_Order__c.Labor_Hours__c</summarizedField>
    <summaryForeignKey>Work_Order__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>