force-app/main/default/objects/Service_Request__c/fields/SUM_of_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>SUM_of_Parts_Cost__c</fullName>
    <label>SUM of Parts Cost</label>
    <summarizedField>Work_Order__c.Parts_Cost__c</summarizedField>
    <summaryForeignKey>Work_Order__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>