force-app/main/default/objects/Service_Request__c/fields/Work_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Count__c</fullName>
    <label>Work Order Count</label>
    <summaryForeignKey>Work_Order__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>