force-app/main/default/objects/Service_Request__c/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <description>Installation Requests</description>
    <label>Installation</label>
</RecordType>