force-app/main/default/objects/Service_Request__c/validationRules/Callback_Phone_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Callback_Phone_Number_Required</fullName>
    <active>true</active>
    <description>Callback Phone Number is required for Emergency Requests</description>
    <errorConditionFormula>AND (
  ISPICKVAL (Priority__c, &apos;Emergency&apos;),
  ISBLANK (Callback_Phone_Number__c)
)</errorConditionFormula>
    <errorMessage>Please enter Callback Phone Number</errorMessage>
</ValidationRule>